fix: update badges to reflect accurate features and benefits

--- a/landing/index.html
+++ b/landing/index.html
@@ -78,8 +78,8 @@
 
             <div class="badges" aria-hidden="true">
               <span>4-10% APY Returns</span>
-              <span>Instant Borrowing</span>
-              <span>Privacy-First Compliance</span>
+              <span>Instant Withdrawals</span>
+              <span>negligible FX fees</span>
             </div>
 
             <div class="cta-action intro-cta">
