feat: add title icon for Minilend wallet and fix HTML formatting

--- a/landing/index.html
+++ b/landing/index.html
@@ -72,7 +72,7 @@
                   src="https://s2.coinmarketcap.com/static/img/coins/64x64/3408.png"
                   style="width: 30px; height: 40px; vertical-align: middle"
                 /> -->
-                   <br /> use your savings as security.
+                   <br/>& use your savings as security.
               </p>
             </div>
 
