Improves PWA scope handling and adds 384x384 icon
Switches PWA scope and URLs to relative paths for broader device compatibility and better support in various environments.

Adds a 384x384 icon to enhance display quality on high-resolution devices.

--- a/landing/index.html
+++ b/landing/index.html
@@ -810,8 +810,8 @@
       // Service Worker Registration for PWA with Android optimizations
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
-          // For Android devices, add additional error handling
-          const swOptions = isAndroid() ? { scope: "/landing/" } : {};
+          // Use relative scope for better compatibility
+          const swOptions = { scope: "./" };
 
           navigator.serviceWorker
             .register("./sw.js", swOptions)
