--- a/landing/index.html
+++ b/landing/index.html
@@ -810,9 +810,35 @@
         );
       };
 
-      // Redirect PWA launches to the main app
+      // Redirect PWA launches to the main app (environment-aware)
       if (isPWAStandalone()) {
-        window.location.href = "https://app.minilend.xyz/?source=pwa_landing";
+        // Derive app URL from current domain
+        const currentOrigin = window.location.origin;
+        let appOrigin;
+
+        // Handle different deployment patterns
+        if (currentOrigin.includes("localhost")) {
+          // Local development - redirect to localhost app port or same origin
+          appOrigin = currentOrigin;
+        } else if (currentOrigin.includes("minilend.xyz")) {
+          // Production - minilend.xyz -> app.minilend.xyz
+          appOrigin = currentOrigin.replace("minilend.xyz", "app.minilend.xyz");
+        } else {
+          // Generic pattern: landing.domain.com -> app.domain.com
+          // or domain.com -> app.domain.com
+          const hostname = window.location.hostname;
+          if (hostname.startsWith("www.")) {
+            appOrigin = currentOrigin.replace("www.", "app.");
+          } else if (!hostname.startsWith("app.")) {
+            // If it's a bare domain or different subdomain, prepend 'app.'
+            appOrigin = `${window.location.protocol}//app.${hostname}${window.location.port ? ":" + window.location.port : ""}`;
+          } else {
+            // Fallback to same origin
+            appOrigin = currentOrigin;
+          }
+        }
+
+        window.location.href = `${appOrigin}/?source=pwa_landing`;
       }
 
       // Detect Android device
